Better way of checking conditions related to arguments